[package]
name = "tracing-subscriber"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"

[dependencies]
tracing-core = "0.1.2"
hashbrown = "0.5"
crossbeam-utils = "0.6"
parking_lot = "0.8"
owning_ref = "0.4.0"

[dev-dependencies]
tracing-log = { path = "../tracing-log" }
